src/objects/Kizuna_CheckIn__c.object
<CustomObject>
    <fields>
        <fullName>CheckinTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CheckinTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckoutTime__c</fullName>
        <label>CheckoutTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Kizuna_Participant__c</referenceTo>
        <relationshipLabel>Check-In</relationshipLabel>
        <relationshipName>CheckIns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Check-In</label>
    <nameField>
        <displayFormat>CI{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>